first blog post draft

--- a/data/blog/new-direction.mdx
+++ b/data/blog/new-direction.mdx
@@ -1,5 +1,5 @@
 ---
-title: New direction
+title: Its time to Reset
 date: '2022-05-28'
 tags: ['Life', 'People', 'Writing']
 draft: false
@@ -10,10 +10,54 @@ canonicalUrl: /blog-and-writing
 authors: ['default']
 ---
 
-# Start writing
+# Why I want to start writing
 
-The scenic lands of Canblada featuring maple leaves, snow-capped mountains, turquoise lakes and Toronto. Take in the sights in this photo gallery exhibition and see how easy it is to replicate with some MDX magic and tailwind classes.
+I first got on the Internet in 2011-12 when I was in 7th standard and I still remember those early days when
+the dial-up broadband connection would get interrupted every time there was a call on the landline and I had
+to wait for the call to get over to connect again. It would take 10-15 mins for a short 5 min YouTube video
+to load in 240p. I used to spend hours sitting at the computer surfing websites, personal blogs, games and videos
+soaking up as much as I could.
 
-Features images served using `next/image` component. The locally stored images are located in a folder with the following path: `/static/images/canada/[filename].jpg`
+Since childhood I was awed by the amazing documentaries and science shows on National Geographic and Discovery channel
+and when the Internet came I started looking up the things I saw on these shows, digging into new topics everyday.
+It was something like - I see or read about topic and I kept learning all I could get about it and until I had found
+the best quality content and people on that topic - then the cycle for another topic began.
+I had found out about MITOCW and tried my hands on a CS class teaching java with a game character Karel the Robot.
+On YouTube I vividly remember I had created notes from the Make presents and Collin’s Lab series which introduced
+electronic components, instruments and explained their inner workings which was very fascinating. This was the first
+time I was studying something all on my own that was no where near the school syllabus.
+Throughout my school life I was lucky to have multiple RC cars and helicopters, and within a few months after
+I used to get them I had disassembled most of them to find out how these things work. Searching around these toys
+I was introduced to the world of RC and Lego, the sites I used to read and videos of people building there own RC cars,
+planes, helicopters, model towns with loads of moving things in RC fairs and LEGO land would feel completely out of this world.
 
-Since we are using mdx, we can create a simple responsive flexbox grid to display our images with a few tailwind css classes.
+Around the time when I got in 8th standard I had started following TechnoBuffalo, DetriotBorg, CNET, MKBHD and some more early
+tech YouTube channels. We had a small Song digital camera which I used to shoot photos of interesting things in our garden and
+around the house. I had learnt how to handle the camera I started delving in photography and film making.
+Then around 2013 along with my cousins we tried starting up a Tech blogs and YouTube channel called GETin.
+This was my first foray into creating content for the internet. Although it only lasted till the time I completed my 10th standard
+I had enjoyed every bit of that process that went behind creating our site and channel, right from creating the blogs,
+designing our logo, banners, researching around the topics, writing scripts, shooting and editing our videos
+and everything in between.
+
+History, wars, learning how nations and civilianisation has evolved was also something I read and still have more to read about.
+Not just in the digital world of internet but also in the physical world everything I saw around me I have always had the
+curiosity to learn about it and the people who are involved with it. Always following around any servicemen who came for
+electrical works, carpentry/woodworking, plumbing or any construction that used to take place in the area. I was there watching,
+listening and observing how human - nature interactions as they took place.
+
+All the things I mentioned above is just scratching the surface. There are lots of more detail in these subjects,
+more interesting topics and corners of the internet that I have explored and that are stored up in my brain all these years,
+or kept saved as bookmarks, reading lists, downloads, playlists, subscriptions, etc.
+This hunger to learn how the world around us works and understand what life is all about has been a constant even today,
+but in those early days it felt like I had unlimited time and mental bandwidth for learning, but over the past few years as
+I have started working a full time job and the new forms of content and the distractions have kept growing creating an
+information overload. And it is critically important to become better at deciding what to consume and be thorough well
+read about it. Now to keep exploring the world at the same pace, building and keeping my mental catalogue/memex organised
+I think writing down the interesting things I have found and new topics that I explore and experience would be the best thing to do. That would be help me to look back as notes and browse through them again whenever I want.
+
+So as I start to write down my learning’s, experiences and interesting people and thoughts I find on the internet and
+around me I would be sharing all of it for the world here on this site.
+
+I welcome you all to my space on the Internet and I hope you enjoy reading the blogs.
+If you are someone who knows me and you would like to learn something you think I know about, feel free to get in touch I will definitely try to share whatever I know on that topic through this blog.
